refactor: Update v2fly configuration to use TCP network for streamSettings

--- a/server/tls-shunt-proxy/config.yaml
+++ b/server/tls-shunt-proxy/config.yaml
@@ -10,4 +10,4 @@ vhosts:
       args: /var/www/html
     default:
       handler: proxyPass
-      args: unix:@v2ray.sock
+      args: 127.0.0.1:40001
