--- a/naiveproxy/Caddyfile
+++ b/naiveproxy/Caddyfile
@@ -7,5 +7,7 @@ route {
     hide_via
     probe_resistance
   }
-  file_server { root /var/www/html }
+  file_server { 
+    root /var/www/html 
+  }
 }
