refactor: Update basic_auth username in Caddyfile and installation script

--- a/naiveproxy/Caddyfile
+++ b/naiveproxy/Caddyfile
@@ -2,7 +2,7 @@
 tls %EMAIL%
 route {
   forward_proxy {
-    basic_auth %EMAIL% %PASSWORD%
+    basic_auth %USERNAME% %PASSWORD%
     hide_ip
     hide_via
     probe_resistance
